<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
     <ListView
         android:id="@+id/updates_list"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="6"
          />

     
     <TextView 
        android:id="@+id/addUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddUpdate"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:paddingTop="10dp"
       
		/>
   


	<RadioGroup 
	    android:id="@+id/radioType"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <RadioButton 
            android:id="@+id/radioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioText" 
            android:checked="true"   
	     />
	    <RadioButton	            
	        android:id="@+id/radioVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioVideo" 
        />
	    <RadioButton 
	       	android:id="@+id/radioImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioImage"
        />
	</RadioGroup> 
	
		<EditText 
	        android:id="@+id/video_link"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/UpdateVideoLink"
	        android:paddingTop="10dp"
			android:paddingLeft="10dp"
			android:inputType="text"
			android:visibility="gone"
	    /> 
	    
		<EditText 
	        android:id="@+id/review"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/UpdateReview"
	        android:paddingTop="10dp"
	        android:paddingLeft="10dp"
	        android:inputType="text"

	    /> 
		
		<Button 
			android:id="@+id/select_photo"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:text="@string/UpdateSelectPhoto"
		    android:paddingLeft="10dp"
		    android:paddingTop="10dp"
	        android:visibility="gone"		    
		/>
		<Button 
		    android:id="@+id/add"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:text="@string/UpdateButton"
		    android:paddingLeft="10dp"
		    android:paddingTop="10dp"
	    /> 
</LinearLayout>    

