<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddLocationActivity"
    android:orientation="vertical" >
    
    <LinearLayout
       android:background="#33B5E5"
       android:id="@+id/loader"
       android:orientation="horizontal" 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:visibility="gone"
        >
		<ProgressBar
		   android:layout_margin="10dp"
		   android:id="@+id/progressBar1"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   />
		<TextView
		    android:layout_margin="10dp"
		    android:textSize="16sp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:textColor="#fff"
		    />
	</LinearLayout>
    <EditText
        android:id="@+id/add_location_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_loc_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/add_location_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/add_description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/add_location_longitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/add_longitude" />

    <EditText
        android:id="@+id/add_location_latitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/add_latitude" />
    
    <Button
        android:id="@+id/select_on_map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:onClick="openMapClick"
        android:text="@string/open_map"
        android:layout_margin="@dimen/elemMargin"
	    android:background="@drawable/button_custom"
	    android:padding="5dp" />

    <Button
        android:id="@+id/get_current_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_current"
        android:layout_margin="@dimen/elemMargin"
	    android:background="@drawable/button_custom"
	    android:padding="5dp"  />

    <EditText
        android:id="@+id/add_photo_addr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_photo" />

    <Button
        android:id="@+id/add_location_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="addLocationClick"
        android:text="@string/add_location"
        android:layout_margin="@dimen/elemMargin"
	    android:background="@drawable/button_custom"
	    android:padding="5dp" />

</LinearLayout>
