<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/LogInMessage"
	        android:textSize="25sp"
	        android:textStyle="bold"
	        android:layout_margin="@dimen/elemMargin" />
	    
	    <EditText
	        android:id="@+id/Username"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/Username"
	        android:inputType="text"
	        android:layout_margin="@dimen/elemMargin" />
	    
	    <EditText
	        android:id="@+id/Password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/Password"
	        android:inputType="textPassword"
	        android:layout_margin="@dimen/elemMargin" />
	    
	    <CheckBox 
	        android:id="@+id/checkBox"
	        android:text="@string/Remember"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="@dimen/elemMargin" />
	
	    
	    <Button 
	        android:id="@+id/LogIn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/LogInButton"
	        android:onClick="SubmitLogIn"
	        android:layout_margin="@dimen/elemMargin"
	        android:background="@drawable/button_custom"
	        android:padding="5dp" />
	    
	    <LinearLayout
			android:id="@+id/loader"
			android:orientation="horizontal" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:visibility="gone"
			 >
			<ProgressBar
				android:layout_margin="10dp"
				android:id="@+id/progressBar1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<TextView
			    android:layout_margin="10dp"
			    android:textSize="16sp"
			    android:text="Verifying credentials ..."
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    />
		</LinearLayout>
	
	</LinearLayout>
</ScrollView>
