<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/RegisterMessage"
	        android:textSize="25sp"
	        android:layout_margin="@dimen/elemMargin"
	        android:textStyle="bold" />
	    
	    <EditText
	        android:id="@+id/newUsername"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:layout_margin="@dimen/elemMargin"
	        android:hint="@string/newUsername" />
	    
	    <EditText
	        android:id="@+id/newPass"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:layout_margin="@dimen/elemMargin"
	        android:hint="@string/newPassword" />
	    
	    <EditText
	        android:id="@+id/retypePass"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:layout_margin="@dimen/elemMargin"
	        android:hint="@string/retypePass" />
	    
	    <EditText
	        android:id="@+id/name"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:layout_margin="@dimen/elemMargin"
	        android:hint="Name" />
	    
	    <EditText
	        android:id="@+id/surname"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:layout_margin="@dimen/elemMargin"
	        android:hint="Surname" />
	    
	   <EditText
	        android:id="@+id/mail"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textEmailAddress"
	        android:layout_margin="@dimen/elemMargin"
	        android:hint="@string/mail" />
	    
	    <Button 
	       	android:id="@+id/regButton"
	      	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
	        android:text="@string/registerButton"
	        android:layout_margin="@dimen/elemMargin"
	        android:background="@drawable/button_custom"
	        android:padding="5dp"
	        android:onClick="SubmitSignUp" />
	    
		<LinearLayout
				android:id="@+id/loader"
				android:orientation="horizontal" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:visibility="gone"
				 >
				<ProgressBar
					android:layout_margin="10dp"
					android:id="@+id/progressBar1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					/>
				<TextView
				    android:layout_margin="10dp"
				    android:textSize="16sp"
				    android:text="Verifying credentials ..."
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    />
		</LinearLayout>

	</LinearLayout>

</ScrollView>
