<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".UserProfileActivity"
     >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher"
        android:layout_margin="@dimen/elemMargin"
    />
    <LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
	>
			<LinearLayout 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			>
			    <TextView
			        android:id="@+id/username"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/UsernameTitle"
			        android:paddingLeft="15dp"
			        android:textSize="20sp"
			        android:textStyle="bold" 
			        android:layout_margin="@dimen/elemMargin"
				/>
				
			    <TextView
			        android:id="@+id/user"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingLeft="15dp"
			        android:textSize="20sp"
			        android:layout_margin="@dimen/elemMargin"
				/>
			</LinearLayout>
			<LinearLayout 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			>		
			    <TextView
			        android:id="@+id/rating"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/RatingTitle"
			        android:paddingLeft="15dp"
			        android:textSize="20sp"
			        android:textStyle="bold" 
			        android:layout_margin="@dimen/elemMargin"
				/>
				
			    <TextView
			        android:id="@+id/rating_value"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingLeft="15dp"
			        android:textSize="20sp"
			        android:layout_margin="@dimen/elemMargin"
				/>
		    </LinearLayout>
			<LinearLayout 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			>	    
			    <TextView
			        android:id="@+id/numeField"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/NameTitle"
			        android:paddingLeft="15dp"
			        android:textSize="20sp"
			        android:textStyle="bold" 
			        android:layout_margin="@dimen/elemMargin"
				/>
				
			    <TextView
			        android:id="@+id/nume"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingLeft="15dp"
			        android:textSize="20sp"
			        android:layout_margin="@dimen/elemMargin"
				/>
		    </LinearLayout>
			<LinearLayout 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			>	    
			    <TextView
			        android:id="@+id/prenumeField"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/SurnameTitle"
			        android:paddingLeft="15dp"
			        android:textSize="20sp"
			        android:textStyle="bold"
			        android:layout_margin="@dimen/elemMargin"
			     	/>
				
			    <TextView
			        android:id="@+id/prenume"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingLeft="15dp"
			        android:textSize="20sp"
			        android:layout_margin="@dimen/elemMargin"
				/>
		    </LinearLayout>
			<LinearLayout 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			>
			    <TextView
			        android:id="@+id/mailField"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/MailTitle"
			        android:textSize="20sp"
			        android:textStyle="bold"
			        android:layout_margin="@dimen/elemMargin"
				/>
				
			    <TextView
			        android:id="@+id/mail"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingLeft="15dp"
			        android:textSize="20sp"
			        android:layout_margin="@dimen/elemMargin"
				/>
		    </LinearLayout>
		</LinearLayout>
    </LinearLayout>
    <TextView 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textSize="20sp"
    	android:textStyle="bold"
    	android:text="@string/UserPostsTitle"
    	android:visibility="gone"
    />
    <ListView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/userPostsList"
    />
    <LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	>
	    <TextView
	        android:id="@+id/addUserRating"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/AddRating"
	        android:textSize="20sp"
	        android:textStyle="bold|italic"
	        android:paddingTop="10dp"
			/>
	    
	    <EditText
	        android:id="@+id/addUserDescription"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/DefaultComment"
	        android:paddingTop="10dp"
	        android:inputType="text"
	         />
	    <LinearLayout
	        android:orientation="horizontal"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent" >
		    <Spinner
		        android:id="@+id/userSpinner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		    />
	     
		     <Button 
			    android:id="@+id/rateUser"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:text="@string/RateButton"
			    android:paddingLeft="10dp"
			    />
		</LinearLayout>
    </LinearLayout>

</LinearLayout>
