<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewGeneralLoc"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" 
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <LinearLayout
       android:background="#33B5E5"
       android:id="@+id/loader"
       android:orientation="horizontal" 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:visibility="visible"
        >
		<ProgressBar
		   android:layout_margin="10dp"
		   android:id="@+id/progressBar1"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   />
		<TextView
		    android:layout_margin="10dp"
		    android:textSize="16sp"
		    android:text="Loading data ..."
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:textColor="#fff"
		    />
	</LinearLayout>
	
	<LinearLayout
       android:id="@+id/location_info"
       android:orientation="vertical" 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:visibility="gone"
        >
	    <ImageView
	        android:id="@+id/imageView"
	        android:layout_width="fill_parent"
	        android:layout_height="100dp"
	        android:textSize="20sp"
	        android:src="@drawable/ic_launcher"
	        />
	    
	      <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Location name:"
	        android:textSize="20sp"
	        android:textStyle="bold|italic"
	        android:paddingTop="10dp" 	/>
	    
	     <TextView
	        android:id="@+id/locationname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/LocName"
	        android:textSize="20sp"
	        android:paddingTop="10dp"
	        android:paddingLeft="10dp" />
	    
	     <TextView
	        android:id="@+id/createby"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/LocCreatedBy"
	        android:textSize="20sp"
	        android:textStyle="bold|italic"
	        android:paddingTop="10dp" 	/>
	     
	      <TextView
	        android:id="@+id/username"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:paddingTop="10dp"
	        android:paddingLeft="10dp" 	/>
	      
	      <TextView
	        android:id="@+id/createon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/LocationCreateDate"
	        android:textSize="20sp"
	        android:textStyle="bold|italic"
	        android:paddingTop="10dp" 	/>
	     
	      <TextView
	        android:id="@+id/data"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:paddingTop="10dp"
	        android:paddingLeft="10dp" 	/>
	     
	      <TextView
	        android:id="@+id/ratingavg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/LocRating"
	        android:textSize="20sp"
	        android:textStyle="bold|italic"
	        android:paddingTop="10dp" />
	      
	      <TextView
	        android:id="@+id/avg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:paddingLeft="10dp" 
	        android:paddingTop="10dp" />
	      
	       <TextView
	        android:id="@+id/description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/LocationDesc"
	        android:textSize="20sp"
	        android:textStyle="bold|italic"
	        android:paddingTop="10dp" />
	       
	       <TextView
	        android:id="@+id/descriptiontext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:paddingTop="10dp" />
	       
	       <TextView
		    	android:id="@+id/subscription_status"
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:paddingLeft="10dp"
	        	android:paddingTop="10dp" 
	       />
	       <Button
			    android:id="@+id/favorite"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:text="@string/AddToMyPlaces"
			    android:paddingLeft="10dp"
		        android:paddingTop="10dp"
		        android:background="@drawable/button_custom"
				android:padding="5dp"
				android:layout_margin="5dp"
		    />
	       <Button
			    android:id="@+id/unsubscribe"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:text="@string/RemoveFromMyPlaces"
			    android:paddingLeft="10dp"
		        android:paddingTop="10dp"
		        android:visibility="gone"
		    	android:background="@drawable/button_custom"
		        android:padding="5dp"
		        android:layout_margin="5dp"
		    />
	</LinearLayout>
</LinearLayout>
</ScrollView>
