<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RatingView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"  
    >
    <LinearLayout
       android:background="#33B5E5"
       android:id="@+id/loader"
       android:orientation="horizontal" 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:visibility="gone"
        >
		<ProgressBar
		   android:layout_margin="10dp"
		   android:id="@+id/progressBar1"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   />
		<TextView
		    android:layout_margin="10dp"
		    android:textSize="16sp"
		    android:text="Loading data ..."
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:textColor="#fff"
		    />
	</LinearLayout>
    
    <ListView
        	android:id="@+id/rating_list"
            android:layout_width="wrap_content"
         	android:layout_height="0dp"
        	android:layout_weight="6"
    />

	    <LinearLayout
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:orientation="vertical"
	         android:background="#CCEBFF"
	         android:paddingBottom="@dimen/activity_vertical_margin"
	    	 android:paddingLeft="@dimen/activity_horizontal_margin"
	    	 android:paddingRight="@dimen/activity_horizontal_margin"
	    	 android:paddingTop="@dimen/activity_vertical_margin"
	    	 android:layout_margin="0dp" >
	    	<TextView
		        android:id="@+id/addRating"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/AddRating"
		        android:textSize="20sp"
		        android:textStyle="bold|italic"
		        android:paddingTop="10dp"
				/>
		    <EditText
		        android:id="@+id/addDescription"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/DefaultComment"
		        android:paddingTop="10dp"
		        android:inputType="text"
		        android:layout_margin="5dp"
		         />
		    <LinearLayout
		        android:orientation="horizontal"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent" >
		    <Spinner
		        android:id="@+id/spinner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		    />
		     
		     <Button 
			    android:id="@+id/rate"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:text="@string/RateButton"
			    android:paddingLeft="10dp"
			    android:background="@drawable/button_custom"
		        android:padding="5dp"
		        android:layout_margin="5dp"
			    />
	     </LinearLayout>
    </LinearLayout>
    
    
</LinearLayout>